--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Heebo', sans-serif;
+  background-color: rgb(202, 202, 202);
 }
 
 h1,
@@ -8,10 +9,10 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Rubik Mono One', sans-serif;
+  font-family: 'Heebo', sans-serif;
 }
 
 .small {
-  font-weight: 300;
-  font-style: italic;
+  font-weight: 100;
+  /* font-style: italic; */
 }
