--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -12,3 +12,12 @@
     text-align: center;
     font-size: 25px;
 }
+
+#shows {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.shows {
+    border-radius: 10px;
+}
